--- a/mini-project-fe/package.json
+++ b/mini-project-fe/package.json
@@ -28,6 +28,7 @@
     "eslint-plugin-react-refresh": "^0.4.16",
     "globals": "^15.14.0",
     "postcss": "^8.5.1",
+    "react-calendar": "^5.1.0",
     "tailwindcss": "^4.0.1",
     "typescript": "~5.6.2",
     "typescript-eslint": "^8.18.2",
