--- a/mini-project-be/package.json
+++ b/mini-project-be/package.json
@@ -13,6 +13,7 @@
   "license": "ISC",
   "type": "commonjs",
   "dependencies": {
+    "cors": "^2.8.5",
     "express": "^4.21.2",
     "mongodb": "^6.13.0",
     "mongoose": "^8.9.5"
