--- a/mini-project-be/package.json
+++ b/mini-project-be/package.json
@@ -14,9 +14,12 @@
   "type": "commonjs",
   "dependencies": {
     "cors": "^2.8.5",
+    "dotenv": "^16.4.7",
     "express": "^4.21.2",
+    "express-async-errors": "^3.1.1",
     "mongodb": "^6.13.0",
-    "mongoose": "^8.3.4"
+    "mongoose": "^8.3.4",
+    "mysql2": "^3.12.0"
   },
   "devDependencies": {
     "nodemon": "^3.1.9"
