--- a/mini-project-be/.env
+++ b/mini-project-be/.env
@@ -2,3 +2,5 @@ MYSQL_HOST = '10.0.11.141'
 MYSQL_USER = 'devusr'
 MYSQL_PASSWORD = 'a2j?XU4^dU?6DmN@'
 MYSQL_DATABASE = 'mini-project-todoapp'
+JWT_SECRET='myjwtsecret'
+PORT = '3000'
