--- a/mini-project-be/.env
+++ b/mini-project-be/.env
@@ -4,3 +4,6 @@ MYSQL_PASSWORD = 'a2j?XU4^dU?6DmN@'
 MYSQL_DATABASE = 'mini-project-todoapp'
 JWT_SECRET='myjwtsecret'
 PORT = '3000'
+EMAIL_USER=kent.sumayang@mlhuillier.com
+EMAIL_PASS=cckxcsveqbfulyuz
+FRONTEND_URL=http://localhost:3000
