--- a/mini-project-be/package.json
+++ b/mini-project-be/package.json
@@ -20,6 +20,7 @@
     "express-async-errors": "^3.1.1",
     "jsonwebtoken": "^9.0.2",
     "mysql2": "^3.12.0",
+    "nodemailer": "^6.10.0",
     "sequelize": "^6.37.5"
   },
   "devDependencies": {
