added specified cors origin

--- a/mini-project-be/.env
+++ b/mini-project-be/.env
@@ -3,7 +3,8 @@ MYSQL_USER='devusr'
 MYSQL_PASSWORD='a2j?XU4^dU?6DmN@'
 MYSQL_DATABASE='mini-project-todoapp'
 JWT_SECRET='myjwtsecret'
-PORT='3000'
+PORT='80'
 EMAIL_USER=kent.sumayang@mlhuillier.com
 EMAIL_PASS=cckxcsveqbfulyuz
 FRONTEND_URL=http://localhost:3000
+CORS_ORIGIN=http://localhost:5173
