--- a/mini-project-be/.env
+++ b/mini-project-be/.env
@@ -1,10 +1,8 @@
-MYSQL_HOST='10.0.11.141'
-MYSQL_USER='devusr'
-MYSQL_PASSWORD='a2j?XU4^dU?6DmN@'
-MYSQL_DATABASE='mini-project-todoapp'
-JWT_SECRET='myjwtsecret'
-PORT='80'
+MYSQL_HOST=10.0.11.141
+MYSQL_USER=devusr
+MYSQL_PASSWORD=a2j?XU4^dU?6DmN@
+MYSQL_DATABASE=mini-project-todoapp
+JWT_SECRET=myjwtsecret
+PORT=3101
 EMAIL_USER=kent.sumayang@mlhuillier.com
 EMAIL_PASS=cckxcsveqbfulyuz
-FRONTEND_URL=http://localhost:3000
-CORS_ORIGIN=http://localhost:5173
