--- a/mini-project-be/docker-compose.yml
+++ b/mini-project-be/docker-compose.yml
@@ -1,18 +1,7 @@
-version: "3.8"
-
 services:
   backend:
-    container_name: mini-project-be
-    build:
-      context: .
-      dockerfile: Dockerfile
+    build: .
     ports:
-      - "3000:3000"              # Adjust if your app uses a different port
-    volumes:
-      - .:/app                  # Mount project files for live reload in development
-      - /app/node_modules       # Prevent overwriting node_modules from host
-    environment:
-      NODE_ENV: development     # Set to "production" if deploying
+      - "3101:3101"
     env_file:
-      - .env                    # Load environment variables from .env file
-    command: npm run dev        # Use "npm start" for production mode
+      - .env
