--- a/mini-project-be/dockerfile
+++ b/mini-project-be/dockerfile
@@ -1,23 +1,21 @@
-# Use an official Node.js image as base
-FROM node:18-alpine
+# Base image
+FROM node:18
 
-# Set working directory inside the container
+# Set working directory
 WORKDIR /app
 
-# Copy package.json and package-lock.json first (for efficient caching)
+# Copy package files and install dependencies
 COPY package*.json ./
-
-# Install dependencies
 RUN npm install
 
-# Copy the rest of the application files
+# Copy backend source code
 COPY . .
 
-# Expose port 3000 (or change if needed)
-EXPOSE 3000
+# ✅ Copy the environment file
+COPY .env .env
 
-# Set environment variables (optional, use .env instead)
-ENV NODE_ENV=production
+# Expose backend port
+EXPOSE 3101
 
-# Start the application
-CMD ["node", "index.js"]
+# Start the app
+CMD ["npm", "run", "start"]
