added docker config

--- a/mini-project-fe/.env
+++ b/mini-project-fe/.env
@@ -1,1 +1,4 @@
-VITE_API_URL = "http://clint.mlhuillier.net"
+# VITE_API_URL=http://localhost:3101/
+# VITE_API_URL=http://mini-project-be:3101
+VITE_API_URL=https://clint-be.mlhuillier.net
+# VITE_PORT=3000
