--- a/mini-project-fe/package.json
+++ b/mini-project-fe/package.json
@@ -17,6 +17,7 @@
     "@heroicons/react": "^2.2.0",
     "@tailwindcss/vite": "^4.0.1",
     "axios": "^1.7.9",
+    "docker": "^1.0.0",
     "dotenv": "^16.4.7",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
